--- a/webapp/frontend/index.html
+++ b/webapp/frontend/index.html
@@ -423,7 +423,7 @@
                             <div class="checkbox"></div>
                             <div class="item-info">
                                 <div class="item-header">
-                                    <div class="item-name">${item.name}</div>
+                                    <div class="item-name">${item.description}</div>
                                     <div class="item-price">${item.price.toFixed(2)} ₽</div>
                                 </div>
                                 <div class="item-details">
